force-app/main/default/objects/ssot__PromotionChannel__dlm/fields/ssot__rel_1729831511879_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729831511879_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionChannel_InStoreLocationId_m_rel</label>
    <referenceTo>ssot__InStoreLocation__dlm</referenceTo>
    <relationshipLabel>PromotionChannel_InStoreLocationId_m_rel</relationshipLabel>
    <relationshipName>rel_1729831511879_end</relationshipName>
    <type>Lookup</type>
</CustomField>