force-app/main/default/objects/ssot__PromotionChannel__dlm/fields/ssot__rel_1729831513314_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729831513314_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionChannel_EngagementChannelId_rel</label>
    <referenceTo>ssot__EngagementChannel__dlm</referenceTo>
    <relationshipLabel>PromotionChannel_EngagementChannelId_rel</relationshipLabel>
    <relationshipName>rel_1729831513314_end</relationshipName>
    <type>Lookup</type>
</CustomField>