force-app/main/default/objects/ssot__PromotionChannel__dlm/fields/ssot__rel_1731659075575_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659075575_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionChannel_PromotionId_map_Pro_rel</label>
    <referenceTo>ssot__Promotion__dlm</referenceTo>
    <relationshipLabel>PromotionChannel_PromotionId_map_Pro_rel</relationshipLabel>
    <relationshipName>rel_1731659075575_end</relationshipName>
    <type>Lookup</type>
</CustomField>