force-app/main/default/objects/ssot__PromotionChannel__dlm/fields/ssot__RetailLocationGroupId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RetailLocationGroupId__c</fullName>
    <label>Retail Location Group</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RetailLocationGroupId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>